Landing page spacing fixx

--- a/src/component/Home/LandingPage.css
+++ b/src/component/Home/LandingPage.css
@@ -114,7 +114,7 @@
 
 /* VTU Details Section */
 .vtuDetails{
-    min-height: 60vh;
+    min-height: 70vh;
     width: 78rem;
     margin: 0 auto;
 }
@@ -127,7 +127,7 @@
 
 /* Flagship Course Section */
 .flagship_course{
-    height: 100vh;
+    height: 140vh;
     width: 90rem;
     display: flex;
     align-items: center;
@@ -138,7 +138,7 @@
     width: 70rem;
 }
 .flagship_course_right{
-    height: 100%;
+    height: 90%;
     width: 25rem;
     background-image: url('./images/FlagshipCourseImage.jpg');
     background-position: center;
@@ -159,7 +159,7 @@
     width: 70rem;
 }
 .industry_section_right{
-    height: 100%;
+    height: 90%;
     width: 25rem;
     background-image: url('./images/IndustryImage.jpg');
     background-position: center;
